# ducter

./: README.md
server/agent/: Makefile.in  configure  dcmd_agent_app.cc  dcmd_agent_app.h  dcmd_agent_config.cc  dcmd_agent_config.h  dcmd_agent_def.cc  dcmd_agent_def.h  dcmd_process.cc  libtool
server/center/: configure  configure.ac  dcmd_center_agent_mgr.cc  dcmd_center_app.cc  dcmd_center_app.h  dcmd_center_config.cc  dcmd_center_config.h  dcmd_center_def.h  dcmd_center_h4_admin.cc  dcmd_center_subtask_output_task.cc  dcmd_center_task_mgr.cc  dcmd_center_task_mgr.h  dcmd_center_task_mgr.inl  libtool
server/center/autom4te.cache/: output.0  requests  traces.0
server/cmn/: dcmd_agent.pb.cc  dcmd_agent.pb.h  dcmd_cmn.pb.cc  dcmd_cmn.pb.h  dcmd_macro.h  dcmd_tss.cc
server/doc/: Apollo安装说明.docx
server/interface/: dcmd_agent.proto  dcmd_cmn.proto
server/proxy/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  dcmd_proxy.cc  dcmd_proxy.conf  dcmd_proxy_app.cc  dcmd_proxy_app.h  dcmd_proxy_config.cc  dcmd_proxy_config.h  dcmd_proxy_def.cc  dcmd_proxy_def.h  libtool
server/proxy/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
server/script/svr_script/: dcmd_svr_sample.script
server/script/task_script/: dcmd_task_install_by_rsync.py
server/sql/: dcmd.sql  dcmd_db.sql  dcmd_trigger.sql  import.sql
server/store/rsync.conf/: rsyncd.conf
server/store/upload/: apollo_accept_upload.py  apollo_conf.py  apollo_db.py  apollo_import_upload.py  apollo_sync_upload.py  apollo_upload_conf.py  apollo_upload_pkg.py
(+588 files in other folders)
